fix video length and tag cut off

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -133,6 +133,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  width: calc(100% - 12rem);
 }
 
 .claim-preview-info {
